--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+NEXT_PUBLIC_API_URL="/api"
 POSTGRES_URL="postgres://default:ymR7ZSflw9pg@ep-raspy-pine-a4j8lnwr-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 POSTGRES_URL_NON_POOLING="postgres://default:ymR7ZSflw9pg@ep-raspy-pine-a4j8lnwr.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
